# test_fastapi_demo-app

./: README.md  docker-compose.yml  dockerfile  pyproject.toml
api/: db.py  main.py  migrate_db.py
api/cruds/: task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
